better permission macro
