# crates/abyssal/src/models/mod.rs
@@ -17,3 +17,4 @@ pub mod token;
 pub use token::Token;
 
 pub mod permission;
+pub use permission::{Permissions, PermissionsDescription};
