# crates/abyssal/src/routes/misc.rs
@@ -4,7 +4,7 @@ use rocket::{State, get, serde::json::Json};
 use rocket_okapi::{JsonSchema, openapi};
 use serde::{Deserialize, Serialize};
 
-use crate::export_routes;
+use crate::{export_routes, models::{Permissions, PermissionsDescription, permission::PermissionsMethods}};
 
 #[derive(Serialize, Deserialize, Clone, Debug, JsonSchema)]
 struct GetInfoResponse {
@@ -19,10 +19,16 @@ async fn get_info() -> Json<GetInfoResponse> {
     })
 }
 
+#[openapi]
+#[get("/info/permissions")]
+async fn get_info_permissions() -> Json<PermissionsDescription> {
+    Json(Permissions::describe())
+}
+
 #[openapi(skip)]
 #[get("/doc/openapi.json")]
 async fn get_openapi_json(spec: &State<OpenApi>) -> Json<OpenApi> {
     Json(spec.inner().clone())
 }
 
-export_routes![get_info, get_openapi_json];
+export_routes![get_info, get_openapi_json, get_info_permissions];
